lib_LTLIBRARIES = libdtnet_aeif.la libdtnet_poisson.la libdtnet_hh.la libdtnet_phaselock.la

libdtnet_aeif_la_SOURCES = aEIF.cpp
libdtnet_poisson_la_SOURCES = poisson.cpp
libdtnet_phaselock_la_SOURCES = phaselock.cpp
libdtnet_hh_la_SOURCES = HH.cpp

libdtnet_aeif_la_LDFLAGS = -version-info 1:0:0 $(BOOST_LDFLAGS)
libdtnet_poisson_la_LDFLAGS = -version-info 1:0:0 $(BOOST_LDFLAGS)
libdtnet_phaselock_la_LDFLAGS = -version-info 1:0:0 $(BOOST_LDFLAGS)
libdtnet_hh_la_LDFLAGS = -version-info 1:0:0 $(BOOST_LDFLAGS)

libdtnet_aeif_la_CXXFLAGS = $(BOOST_CPPFLAGS)
libdtnet_poisson_la_CXXFLAGS = $(BOOST_CPPFLAGS)
libdtnet_phaselock_la_CXXFLAGS = $(BOOST_CPPFLAGS)
libdtnet_hh_la_CXXFLAGS = $(BOOST_CPPFLAGS)

